# bank-operations-widg

./: .flake8  .gitignore  LICENSE  README.md  index.html  main.py  pyproject.toml  requirements.txt
HOMEWORKE9_2 — копия/: pyproject.toml
HOMEWORKE9_2 — копия/src/: __init__.py  mask.py  widget.py
data/: operations.json
src/: __init__.py  bank_operations.py  decorators.py  external_api.py  generators.py  logger_config.py  mask.py  processing.py  processor.py  readers.py  utils.py  widget.py
tests/: __init__.py  conftest.py  test_bank_operations.py  test_decorators.py  test_external_api.py  test_generators.py  test_mask.py  test_processing.py  test_processor.py  test_readers.py  test_utils.py  test_widget.py
