[project]
name = "homeworke9-2"
version = "0.1.0"
description = ""
authors = [
    {name = "Yuliya",email = "zohn12333@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
